fixed bullet alignment

--- a/src/components/experience/ResumeEntry.css
+++ b/src/components/experience/ResumeEntry.css
@@ -1,11 +1,13 @@
 @import "../../default/default.css";
 
 div.resume-entry-container h3 {
+    margin-top: 7px;
+    margin-bottom: 6px;
     color: var(--color-6, #ebebeb);
 }
 
 div.resume-entry-container h3 span {
-    margin-right: 8px;
+    padding-right: 8px;
 }
 
 div.resume-entry-container h3 span.highlight-company{
@@ -37,12 +39,16 @@ a.company-hyperlink:after {
   }
 
 div.resume-entry-container h4.dates {
+    margin-top: 10px;
+    margin-bottom: 15px;
     letter-spacing: 0.05em;
     font-family: "SF Mono", Monaco, monospace;
     color: var(--color-7, #ebebeb);
 }
 
 div.resume-entry-container div ul {
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -50,7 +56,7 @@ div.resume-entry-container div ul li {
     list-style-type: none;
     display: list-item;
     position: relative;
-    padding-left: 30px;
+    padding-left: 20px;
     color: var(--color-7, #ebebeb);
     margin-bottom: 10px;
 }
@@ -59,7 +65,7 @@ div.resume-entry-container div ul li::before {
     box-sizing: inherit;
     content: "▹";
     position: absolute;
-    padding-left: -30px;
+    left: 0;
     color: var(--color-4, #ebebeb);
 }
 
